--- a/src/app/layout/user-data/user-data.component.html
+++ b/src/app/layout/user-data/user-data.component.html
@@ -17,7 +17,7 @@
         <td>
           <a  class="btn btn-info" (click)="view(product.p_id,product.p_name,product.p_price)">View</a>&nbsp;
           <a   class="btn btn-primary" (click)="edit(product.p_id,product.p_name,product.p_price)">Edit</a>&nbsp;
-          <button type="button"  class="btn btn-danger" (click)="deleteProduct(product.p_id)">Delete</button>
+          <button type="button"  class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>
         </td>
       </tr>
     </table>
