--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div [@routerTransition] class="login-page">
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
+            <img class="user-avatar" src="../assets/images/logo.png" width="150px" />
             <h1>Demo App By Sachin & Rahul</h1>
             <form role="form"  [formGroup]="loginForm" >
                 <div class="form-content">
