--- a/src/app/layout/user-data/user-data.component.html
+++ b/src/app/layout/user-data/user-data.component.html
@@ -2,6 +2,7 @@
     <h1>All Products</h1>
   
     <a  class="btn btn-success" style="float: right;margin-bottom: 1%;" (click)="addProduct()">Create New Product</a>
+    <a  class="btn btn-info" style="margin-bottom: 1%;" (click)="refresh()">Refresh</a>
     
     <table class="table table-bordered">
       <tr>
