--- a/src/app/layout/charts/charts.component.html
+++ b/src/app/layout/charts/charts.component.html
@@ -26,7 +26,7 @@
 
             <div class="form-row justify-content-center">
                 <div class="col-sm-6 ">
-                    <label>p_price</label>
+                    <label>Price</label>
                     <input type="text" formControlName="p_price" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.p_price.errors }" [readonly]="isView" />
                     <div *ngIf="submitted && f.p_price.errors" class="invalid-feedback">
