--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,7 +7,7 @@
                 <div class="form-content">
                     <div class="form-group">
                         <input
-                            [placeholder]="'Full Name' | translate"
+                            [placeholder]="'Full Name' "
                             class="form-control input-underline input-lg"
                             type="text"
                         />
@@ -15,7 +15,7 @@
 
                     <div class="form-group">
                         <input
-                            [placeholder]="'Email' | translate"
+                            [placeholder]="'Email' "
                             class="form-control input-underline input-lg"
                             type="text"
                         />
@@ -23,22 +23,22 @@
 
                     <div class="form-group">
                         <input
-                            [placeholder]="'Password' | translate"
+                            [placeholder]="'Password' "
                             class="form-control input-underline input-lg"
                             type="password"
                         />
                     </div>
                     <div class="form-group">
                         <input
-                            [placeholder]="'Repeat Password' | translate"
+                            [placeholder]="'Repeat Password' "
                             class="form-control input-underline input-lg"
                             type="password"
                         />
                     </div>
                 </div>
-                <a [routerLink]="['/dashboard']" class="btn rounded-btn">{{ 'Register' | translate }}</a
+                <a [routerLink]="['/dashboard']" class="btn rounded-btn">{{ 'Register'  }}</a
                 >&nbsp;
-                <a [routerLink]="['/login']" class="btn rounded-btn">{{ 'Log in' | translate }}</a>
+                <a [routerLink]="['/login']" class="btn rounded-btn">{{ 'Log in'  }}</a>
             </form>
         </div>
     </div>
